[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Simulated Matrix data analysis demo (pip vs Poetry)"
authors = ["Student <student@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "*"
pandas = "*"
matplotlib = "*"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
